Tidied up the description

--- a/jQuery.AJAX/example.html
+++ b/jQuery.AJAX/example.html
@@ -15,15 +15,15 @@
 </head>
 
 <body>
- <div style="width:70%; word-wrap:break-word">
-  <h2><strong>jQuery AJAX plug-in demo's</strong></h2>
-  <p style="text-align:center">
-   <blockquote>
-    Need simple XMLHttpRequest functionality? This should do the trick. I may re-write this in
-    pure java-script later but for the ease of use and quickness of implementation
-    this will do.
-   </blockquote>
+ <div id="contact-form" class="clearfix">
+  <h2><strong>jQuery AJAX plug-in demo</strong></h2>
+  <p>
+   Here is my version of a AJAX plug-in. Supports caching, same-origin restricitons,
+   multiple data types, pre, success and error callback methods and some additional
+   header verifications that can be further explained by viewing the proxy.php
+   file accompanying this distribution.
   </p>
+ </div>
 
   <!-- example using default options -->
   <script>
